Bug 500771 - Income and Expense this month report do not display scheduled income transaction if entered the 1st day of the month
Summary: Income and Expense this month report do not display scheduled income transac...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: reports (other bugs)
Version First Reported In: 5.1.3
Platform: Microsoft Windows Microsoft Windows
: NOR minor
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-02-26 13:20 UTC by pierremaille
Modified: 2025-02-26 17:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2
Sentry Crash Report:


Attachments
Screenshot (399.10 KB, application/pdf)
2025-02-26 13:20 UTC, pierremaille
Details

Note You need to log in before you can comment on or make changes to this bug.
Description pierremaille 2025-02-26 13:20:18 UTC
Created attachment 178895 [details]
Screenshot

SUMMARY
Income and Expense "this month" report  do not display scheduled income transaction if entered the 1st day of the month

STEPS TO REPRODUCE
1.  schedule an Income transaction for the 1day of the month for an upcoming month 
2.  Generate an income and Expense "this month" report. 
3. In the report, change date to display for an upcoming month from 1st day to the last day of the month

OBSERVED RESULT
no presence of the income schedule transaction in the income and Expense "this month" report. 
all others report s take in account the amount entered on 1st day of the month

EXPECTED RESULT
presence of the income schedule transaction  in the income and Expense "this month" report. 

bug bypass
if you change the date of the income and Expense "this month" report to the last day of previous month, schedule income transaction in the income and Expense "this month" report appear and being considered in the report.

maybe the schedule transaction does not count in if its the same day of the start of the report?

SOFTWARE/OS VERSIONS
Windows:  10
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Thomas Baumgart 2025-02-26 17:47:33 UTC
Git commit f2f9895907bd8c411322b754bc3ab1fd04fcb6cc by Thomas Baumgart.
Committed on 26/02/2025 at 17:47.
Pushed by tbaumgart into branch 'master'.

Don't skip scheduled transactions due on report start date

When the next due date is equal to the start date of a report which
should include scheduled transactions as e.g. preview, then this initial
transaction was not included in the report. This change fixes the
problem.
FIXED_IN: 5.2

M  +8    -1    kmymoney/plugins/views/reports/core/pivottable.cpp

https://invent.kde.org/office/kmymoney/-/commit/f2f9895907bd8c411322b754bc3ab1fd04fcb6cc