Don't skip scheduled transactions due on report start date

When the next due date is equal to the start date of a report which
should include scheduled transactions as e.g. preview, then this initial
transaction was not included in the report. This change fixes the
problem.

BUG: 500771
FIXED_IN: 5.2